# args-parser

./: .clang-format  .gitignore  .travis.yml  Args.pro  ArgsConfig.cmake.in  ArgsConfigVersion.cmake.in  CMakeLists.txt  COPYING  README  README.md  REUSE.toml  _r_e_a_d_m_e_8md.html  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  annotated_dup.js  api_8hpp.html  api_8hpp.js  api_8hpp__dep__incl.map  api_8hpp__dep__incl.md5  api_8hpp__incl.map  api_8hpp__incl.md5  api_8hpp_source.html  apply-clang-format.sh  arg_8hpp.html  arg_8hpp.js  arg_8hpp__dep__incl.map  arg_8hpp__dep__incl.md5  arg_8hpp__incl.map  arg_8hpp__incl.md5  arg_8hpp_source.html  arg__as__command_8hpp.html  arg__as__command_8hpp__dep__incl.map  arg__as__command_8hpp__dep__incl.md5  arg__as__command_8hpp__incl.map  arg__as__command_8hpp__incl.md5  arg__as__command_8hpp_source.html  arg__iface_8hpp.html  (+330 more)
.github/workflows/: codeql-analysis.yml  coverity-scan.yml  qt6.yml  testing.yml
.reuse/: dep5
Args/: Args.pri  all.hpp  api.hpp  arg.cpp  arg.hpp  arg_as_command.hpp  arg_iface.hpp  cmd_line.cpp  cmd_line.hpp  command.hpp  context.cpp  context.hpp  enums.hpp  exceptions.cpp  exceptions.hpp  group_iface.hpp  groups.hpp  help.hpp  help_printer.cpp  help_printer.hpp  help_printer_iface.hpp  multi_arg.cpp  multi_arg.hpp  positional.hpp  prj.rb  types.hpp  utils.hpp  value_utils.hpp
UnitTest/: unit_test.cpp  unit_test.hpp
args-parser/: all.hpp  api.hpp  arg.hpp  arg_iface.hpp  cmd_line.hpp  command.hpp  context.hpp  enums.hpp  exceptions.hpp  group_iface.hpp  groups.hpp  help.hpp  help_printer.hpp  help_printer_iface.hpp  multi_arg.hpp  types.hpp  utils.hpp  value_utils.hpp
doc/: Doxyfile  example.cpp  help.txt  mainpage.dox  oneline.cpp
samples/: CMakeLists.txt  prj.rb  samples.pro
samples/api/: CMakeLists.txt  api.pro  main.cpp  prj.rb
samples/help/: CMakeLists.txt  help.pro  main.cpp
samples/qt_help/: CMakeLists.txt  main.cpp  prj.rb  qt_help.pro
samples/sample_with_commands/: CMakeLists.txt  main.cpp  prj.rb  sample_with_commands.pro
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.html  enums_2.js  enumvalues_0.js  enumvalues_1.html  enumvalues_1.js  (+76 more)
tags/1.0.0/Args/: arg_iface.cpp  cmd_line.cpp  cmd_line.hpp  multi_arg.hpp  utils.hpp  version.rb
tags/1.0.0/UnitTest/: version.rb
tags/1.0.0/samples/help/: main.cpp
tags/1.0.0/test/arg/: main.cpp
tags/1.0.0/test/context/: prj.rb
tags/1.0.0/test/multi_arg/: prj.ut.rb
tags/1.0.1/: README
tags/1.0.1/Args/: arg.hpp  context.cpp  help_printer.cpp
tags/1.0.1/UnitTest/: prj.rb  unit_test.hpp
tags/1.0.1/doc/: Doxyfile
tags/1.0.1/test/: prj.rb
tags/1.0.1/test/context/: prj.ut.rb
tags/1.0.2/Args/: arg_iface.hpp  help.cpp  help.hpp
tags/1.0.2/samples/: prj.rb
tags/1.0.2/samples/help/: prj.rb
tags/1.0.2/test/arg/: prj.ut.rb
tags/1.0.2/test/multi_arg/: prj.rb
tags/1.0.3/: COPYING
tags/1.0.3/Args/: arg.hpp  arg_iface.hpp  cmd_line.hpp  context.hpp  help.hpp  help_printer.hpp
tags/1.0.3/UnitTest/: unit_test.hpp
tags/1.0.3/samples/help/: prj.rb
tags/1.0.3/test/context/: prj.rb
tags/1.0.3/test/flag_and_name/: main.cpp
tags/1.0.3/test/multi_arg/: prj.rb
test/: prj.rb
test/arg/: main.cpp
test/context/: main.cpp
test/flag_and_name/: prj.ut.rb
test/multi_arg/: main.cpp
tests/: CMakeLists.txt  prj.rb  tests.pro
tests/auto/: CMakeLists.txt  auto.pro
tests/auto/api/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/arg/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/arg_as_command/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/command/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/context/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/exceptions/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/flag_and_name/: CMakeLists.txt  main.cpp  prj.rb  prj.ut.rb
tests/auto/groups/: CMakeLists.txt  groups.pro  main.cpp  prj.rb  prj.ut.rb
tests/auto/help/: CMakeLists.txt  help.pro  main.cpp  prj.rb  prj.ut.rb
tests/auto/multi_arg/: CMakeLists.txt  main.cpp  multi_arg.pro  prj.rb  prj.ut.rb
tests/auto/stuff/: CMakeLists.txt  command.pro  main.cpp  prj.rb  prj.ut.rb
tests/benchmark/: CMakeLists.txt  main.cpp
trunk/: README  build.rb
trunk/Args/: arg.cpp  arg.hpp  arg_iface.hpp  cmd_line.cpp  cmd_line.hpp  context.cpp  context.hpp  exceptions.hpp  help.hpp  help_printer.hpp  prj.rb  utils.cpp  utils.hpp
trunk/UnitTest/: unit_test.hpp
trunk/samples/help/: main.cpp
trunk/test/: prj.rb
trunk/test/arg/: prj.rb
trunk/test/context/: main.cpp
trunk/test/flag_and_name/: prj.rb
trunk/test/multi_arg/: main.cpp
