
project( tests )

add_subdirectory( arg )
add_subdirectory( arg_as_command )
add_subdirectory( command )
add_subdirectory( context )
add_subdirectory( flag_and_name )
add_subdirectory( groups )
add_subdirectory( multi_arg )
add_subdirectory( help )
add_subdirectory( api )
add_subdirectory( exceptions )
