# SPDX-FileCopyrightText: 2013-2024 Igor Mironchik <igor.mironchik@gmail.com>
# SPDX-License-Identifier: MIT

project( tests )

add_subdirectory( arg )
add_subdirectory( command )
add_subdirectory( context )
add_subdirectory( flag_and_name )
add_subdirectory( groups )
add_subdirectory( multi_arg )
add_subdirectory( help )
add_subdirectory( api )
add_subdirectory( exceptions )
add_subdirectory( stuff )
add_subdirectory( build )
